@@ -65,7 +65,7 @@ class UploadFromStash extends UploadBase {
 	/**
 	 * There is no need to stash the image twice
 	 */
-	public function stashSession() {
+	public function stashSession( $key = null ) {
 		if ( !empty( $this->mSessionKey ) )
 			return $this->mSessionKey;
 		return parent::stashSession();
